--- a/package.json
+++ b/package.json
@@ -21,23 +21,28 @@
   "author": "yrenaudin",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.50",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "@types/lodash": "^4.14.68",
+    "@types/react": "^15.0.9",
+    "@types/react-dom": "^15.5.1",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
     "ejs-loader": "^0.3.0",
-    "eslint": "^3.14.0",
-    "expose-loader": "^0.7.1",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.26.0",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.5",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "2.2.0"
+    "eslint": "^4.1.1",
+    "expose-loader": "^0.7.3",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.29.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "rimraf": "^2.6.1",
+    "rxjs": "^5.4.1",
+    "style-loader": "^0.18.2",
+    "ts-loader": "^2.2.2",
+    "tslint": "^5.4.3",
+    "tslint-loader": "^3.5.0",
+    "typescript": "~2.3.0",
+    "webpack": "^3.0.0",
+    "webpack-dashboard": "^0.4.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
     "lodash": "^4.17.4"
