--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.4.1",
+    "rxjs": "^5.5.0-beta.2",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.2",
     "tslint": "^5.4.3",
