--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.5.0-beta.2",
+    "rxjs": "^5.5.0-beta.5",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.2",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.0",
     "typescript": "~2.3.0",
-    "webpack": "^3.0.0",
+    "webpack": "3.5.5",
     "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
     "lodash": "^4.17.4"
